# ppmlr_eigen

./: .clang-format  .gitignore  .ycm_extra_conf.py  CMakeLists.txt  Makefile  README.md  compile_commands.json  ppm1d
cmake/: PPMLR_build_flags.cmake  PPMLR_dependencies.cmake
include/: dbg_util.hpp  geometry.hpp  global_const.hpp  global_def.hpp  simulation.hpp
include/physics/: eos.hpp  hydro.hpp  timestep.hpp
include/ppmlr/: boundary_conditions.hpp  parabola.hpp  ppm_constant.hpp  ppm_def.hpp  ppm_forces.hpp  ppm_grid.hpp  ppmlr.hpp  riemann_solve.hpp  state.hpp
src/: main.cpp  print.cpp
